plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.io'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	//Validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
	implementation "io.jsonwebtoken:jjwt-jackson:0.11.2"                                    // Spring Json-Web-Token
//	implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
	// JAXB API for Java 11+
//	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.3'
//	implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.3'
//	implementation 'javax.xml.bind:jaxb-api:2.3.1'
//	implementation 'com.sun.xml.bind:jaxb-core:2.3.0.1'
//	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
//	implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.0'

}




tasks.named('test') {
	useJUnitPlatform()
}
